resources/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: color-app-route
spec:
  path: /
  to:
    kind: Service
    name: color-app-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
